# RAG-Pipeline-with-Hybrid-Search-Over-Internal-Docs

./: .dockerignore  .env.example  .gitattributes  .gitignore  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
.chroma/08d5df17-9ca9-4bb0-b002-43f48fee2d02/: index_metadata.pickle
.chroma/a4024f17-474a-4972-837f-9be7d5dbdec8/: index_metadata.pickle
.chroma/f79643c7-4453-477f-a8d8-4a9c961e6756/: index_metadata.pickle
data/golden/: .gitkeep  golden.jsonl
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx  styles.css
frontend/src/components/: AnswerCard.jsx  ChunkInspector.jsx  CitationsTable.jsx  ConfidenceBars.jsx  QueryForm.jsx
scripts/: 00_embedding_playground.py  ask.py  compare_retrieval.py  fetch_corpus.py  ingest.py  run_eval.py
src/rag/: __init__.py  config.py  embeddings.py  llm.py
src/rag/api/: __init__.py  main.py  schemas.py
src/rag/evals/: __init__.py  metrics.py  report.py  runner.py
src/rag/generate/: __init__.py  confidence.py  generate.py  prompts.py  verify.py
src/rag/index/: __init__.py  sparse.py  vector.py
src/rag/ingest/: __init__.py  chunkers.py  dedup.py  loaders.py
src/rag/retrieve/: __init__.py  dense.py  fusion.py  pipeline.py  rerank.py  sparse.py
tests/: test_api.py  test_chunkers.py  test_dedup.py  test_evals.py  test_fusion.py  test_generate.py  test_scaffold.py
