[project]
name = "rag-pipeline"
version = "0.1.0"
description = "RAG pipeline with hybrid search (dense + BM25 + RRF + reranking) over technical documentation, with verified citations and an evaluation suite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "openai>=1.40",            # OpenAI-compatible client — talks to Ollama (local) and Groq (deployed)
    "chromadb>=0.5",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "beautifulsoup4>=4.12",
    "pypdf>=4.2",
    "httpx>=0.27",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",  # multipart form parsing for the /v1/ingest upload endpoint
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
